@@ -2,368 +2,280 @@ package ru.practicum.ewm.main_service.event.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.ewm.main_service.category.dto.CategoryDto;
+import ru.practicum.ewm.main_service.category.mapper.CategoryMapper;
 import ru.practicum.ewm.main_service.category.model.Category;
 import ru.practicum.ewm.main_service.category.repository.CategoryRepository;
+import ru.practicum.ewm.main_service.category.service.CategoryService;
 import ru.practicum.ewm.main_service.event.dto.*;
-import ru.practicum.ewm.main_service.event.enums.EventSort;
-import ru.practicum.ewm.main_service.event.enums.EventState;
 import ru.practicum.ewm.main_service.event.mapper.EventMapper;
-import ru.practicum.ewm.main_service.event.mapper.EventTool;
-import ru.practicum.ewm.main_service.event.mapper.LocationMapper;
 import ru.practicum.ewm.main_service.event.model.Event;
-import ru.practicum.ewm.main_service.event.model.Location;
 import ru.practicum.ewm.main_service.event.repository.EventRepository;
-import ru.practicum.ewm.main_service.event.repository.LocationRepository;
-import ru.practicum.ewm.main_service.exception.BadRequestException;
-import ru.practicum.ewm.main_service.exception.ForbiddenException;
-import ru.practicum.ewm.main_service.exception.NotFoundException;
+import ru.practicum.ewm.main_service.event.util.EventState;
+import ru.practicum.ewm.main_service.event.util.StateAction;
+import ru.practicum.ewm.main_service.exception.ConflictException;
+import ru.practicum.ewm.main_service.exception.ObjectNotFoundException;
+import ru.practicum.ewm.main_service.exception.ValidationException;
+import ru.practicum.ewm.main_service.location.repository.LocationRepository;
+import ru.practicum.ewm.main_service.request.dto.ParticipationRequestDto;
+import ru.practicum.ewm.main_service.request.mapper.RequestMapper;
+import ru.practicum.ewm.main_service.request.repository.RequestRepository;
 import ru.practicum.ewm.main_service.user.model.User;
 import ru.practicum.ewm.main_service.user.repository.UserRepository;
+import ru.practicum.ewm.main_service.user.service.UserServiceImpl;
+import ru.practicum.ewm.main_service.utility.TimeUtil;
+import ru.practicum.ewm.stats_client.StatsClient;
 
 import javax.servlet.http.HttpServletRequest;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 @Slf4j
+@Transactional
 public class EventServiceImpl implements EventService {
+
+    private final EventRepository eventRepository;
+    private final UserServiceImpl userService;
+    private final CategoryService categoryService;
+    private final LocationRepository locationRepository;
+    private final RequestRepository requestRepository;
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
-    private final StatsService statsService;
-    private final LocationRepository locationRepository;
-    private final EventRepository eventRepository;
-    private final EventMapper eventMapper;
-    private final EventTool eventTool;
-    private final LocationMapper locationMapper;
+    private final StatsClient client;
+
+
 
     @Override
-    public List<EventFullDto> getEventsByAdmin(List<Long> users, List<EventState> states, List<Long> categories,
-                                               LocalDateTime rangeStart, LocalDateTime rangeEnd, Integer from, Integer size) {
-        log.info("Вывод событий на запрос администратора с параметрами users = {}, states = {}, categoriesId = {}, " +
-                        "rangeStart = {}, rangeEnd = {}, from = {}, size = {}",
-                users, states, categories, rangeStart, rangeEnd, from, size);
+    public Event validatedEvent(Long eventId) {
+        return eventRepository.findById(eventId).orElseThrow(() -> new ObjectNotFoundException(String.format("События с id = %d не существует", eventId)));
 
-        checkStartIsBeforeEnd(rangeStart, rangeEnd);
-
-        List<Event> events = eventRepository.getEventsByAdmin(users, states, categories, rangeStart, rangeEnd, from, size);
-
-        return toEventsFullDto(events);
     }
 
     @Override
-    @Transactional
-    public EventFullDto patchEventByAdmin(Long eventId, UpdateEventAdminRequest updateEventAdminRequest) {
-        log.info("Обновление события с id {} по запросу администратора с параметрами {}", eventId, updateEventAdminRequest);
-
-        checkNewEventDate(updateEventAdminRequest.getEventDate(), LocalDateTime.now().plusHours(1));
-
-        Event event = getEventById(eventId);
-
-        if (updateEventAdminRequest.getAnnotation() != null) {
-            event.setAnnotation(updateEventAdminRequest.getAnnotation());
+    public EventFullDto patchDataEventAndState(UpdateEventAdminRequest updateEventAdminRequest, Long eventsId) {
+        Event event = validatedEvent(eventsId);
+        CategoryDto category = categoryService.findCategoryById(updateEventAdminRequest.getCategory() != null ?
+                updateEventAdminRequest.getCategory() : event.getCategory().getId());
+        EventFullDto eventFullDto = EventMapper.toUpdateEventAdminRequest(updateEventAdminRequest, event, category);
+        if (event.getState().equals(EventState.PUBLISHED)) {
+            throw new ConflictException("Событие уже опубликовано");
         }
 
-        if (updateEventAdminRequest.getDescription() != null) {
-            event.setDescription(updateEventAdminRequest.getDescription());
+        if (event.getState().equals(EventState.CANCELED)) {
+            throw new ConflictException("Событие уже отменено");
         }
-
-        if (updateEventAdminRequest.getCategory() != null) {
-            event.setCategory(categoryRepository
-                    .findById(updateEventAdminRequest.getCategory())
-                    .orElseThrow(() -> new NotFoundException("Категории с таким id не существует.")));
-        }
-
-        if (updateEventAdminRequest.getEventDate() != null) {
-            event.setEventDate(updateEventAdminRequest.getEventDate());
-        }
-
-        if (updateEventAdminRequest.getPaid() != null) {
-            event.setPaid(updateEventAdminRequest.getPaid());
-        }
-
-        if (updateEventAdminRequest.getLocation() != null) {
-            event.setLocation(getOrSaveLocation(updateEventAdminRequest.getLocation()));
-        }
-
-        if (updateEventAdminRequest.getParticipantLimit() != null) {
-            checkIsNewLimitNotLessOld(updateEventAdminRequest.getParticipantLimit(),
-                    statsService.getConfirmedRequests(List.of(event)).getOrDefault(eventId, 0L));
-
-            event.setParticipantLimit(updateEventAdminRequest.getParticipantLimit());
-        }
-
-        if (updateEventAdminRequest.getRequestModeration() != null) {
-            event.setRequestModeration(updateEventAdminRequest.getRequestModeration());
-        }
-
         if (updateEventAdminRequest.getStateAction() != null) {
-            if (!event.getState().equals(EventState.PENDING)) {
-                throw new ForbiddenException(String.format("Field: stateAction. Error: опубликовать можно только " +
-                        "события, находящиеся в ожидании публикации. Текущий статус: %s", event.getState()));
-            }
-
-            switch (updateEventAdminRequest.getStateAction()) {
-                case PUBLISH_EVENT:
-                    event.setState(EventState.PUBLISHED);
-                    event.setPublishedOn(LocalDateTime.now());
-                    break;
-                case REJECT_EVENT:
-                    event.setState(EventState.REJECTED);
-                    break;
+            if (updateEventAdminRequest.getStateAction().contains("PUBLISH")) {
+                eventFullDto.setState(EventState.PUBLISHED.toString());
+                event.setState(EventState.PUBLISHED);
+            } else {
+                eventFullDto.setState(EventState.CANCELED.toString());
+                event.setState(EventState.CANCELED);
             }
         }
-
-        if (updateEventAdminRequest.getTitle() != null) {
-            event.setTitle(updateEventAdminRequest.getTitle());
+        if (updateEventAdminRequest.getEventDate() != null) {
+            if (LocalDateTime.parse(updateEventAdminRequest.getEventDate(), TimeUtil.FORMATTER).isBefore(event.getEventDate())) {
+                throw new ValidationException("Неправильно указано время");
+            }
         }
+        eventRepository.save(event);
 
-        return toEventFullDto(eventRepository.save(event));
+        return eventFullDto;
+    }
+
+    private Event validatedEvent(Long eventId, Long userId) {
+        Event event = validatedEvent(eventId);
+        if (!event.getInitiator().getId().equals(userId)) {
+            throw new IllegalArgumentException(String.format("Запрашиваемое событие не принадлежит полльзовутелю с id=%d", userId));
+        }
+        return event;
     }
 
     @Override
-    public List<EventShortDto> getAllEventsByPrivate(Long userId, Pageable pageable) {
-        log.info("Вывод всех событий пользователя с id {} и пагинацией {}", userId, pageable);
+    public EventFullDto addEvent(Long userId, NewEventDto newEventDto) {
+        if (LocalDateTime.parse(newEventDto.getEventDate(), TimeUtil.FORMATTER).isBefore(LocalDateTime.now().plusHours(2))) {
+            throw new ValidationException("Неправильно указана дата");
+        }
+        if (newEventDto.getPaid() == null) {
+            newEventDto.setPaid(false);
+        }
+        if (newEventDto.getRequestModeration() == null) {
+            newEventDto.setRequestModeration(true);
+        }
+        if (newEventDto.getParticipantLimit() == null) {
+            newEventDto.setParticipantLimit(0);
+        }
+        User user = userService.validateUser(userId);
+        Category category = CategoryMapper.toCategory(categoryService.findCategoryById(newEventDto.getCategory()));
+        Event event = EventMapper.toEvent(newEventDto, user, category);
 
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователя с таким id не существует."));
-
-        List<Event> events = eventRepository.findAllByInitiatorId(userId, pageable);
-
-        return eventTool.toEventsShortDto(events);
+        locationRepository.save(newEventDto.getLocation());
+        event.setState(EventState.PENDING);
+        event.setViews(0L);
+        event.setConfirmedRequests(0);
+        eventRepository.save(event);
+        return EventMapper.toEventFullDto(event);
     }
 
     @Override
-    @Transactional
-    public EventFullDto createEventByPrivate(Long userId, NewEventDto newEventDto) {
-        log.info("Создание нового события пользователем с id {} и параметрами {}", userId, newEventDto);
-
-        checkNewEventDate(newEventDto.getEventDate(), LocalDateTime.now().plusHours(2));
-
-        User eventUser = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователя с таким id не существует."));
-
-        Category eventCategory = categoryRepository
-                .findById(newEventDto.getCategory())
-                .orElseThrow(() -> new NotFoundException("Категории с таким id не существует."));
-        Location eventLocation = getOrSaveLocation(newEventDto.getLocation());
-
-        Event newEvent = eventMapper.toEvent(newEventDto, eventUser, eventCategory, eventLocation, LocalDateTime.now(),
-                EventState.PENDING);
-
-        return toEventFullDto(eventRepository.save(newEvent));
+    @Transactional(readOnly = true)
+    public List<EventShortDto> findAllEventsByUserId(Long userId, int from, int size) {
+        PageRequest page = PageRequest.of(from / size, size);
+        userService.validateUser(userId);
+        List<EventShortDto> eventShortDto = eventRepository.findAllByInitiatorId(userId, page)
+                .stream()
+                .map(EventMapper::toEventShortDto).collect(Collectors.toList());
+        if (eventShortDto.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return eventShortDto;
     }
 
     @Override
-    public EventFullDto getEventByPrivate(Long userId, Long eventId) {
-        log.info("Вывод события с id {}, созданного пользователем с id {}", eventId, userId);
-
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователя с таким id не существует."));
-
-        Event event = getEventByIdAndInitiatorId(eventId, userId);
-
-        return toEventFullDto(eventRepository.save(event));
+    @Transactional(readOnly = true)
+    public EventFullDto findEventByUserId(Long userId, Long eventId) {
+        Event event = validatedEvent(eventId);
+        if (!event.getInitiator().getId().equals(userId)) {
+            throw new IllegalArgumentException(String.format("Запрашиваемое событие не принадлежит полльзовутелю с id=%d", userId));
+        }
+        return EventMapper.toEventFullDto(event);
     }
 
     @Override
-    @Transactional
-    public EventFullDto patchEventByPrivate(Long userId, Long eventId, UpdateEventUserRequest updateEventUserRequest) {
-        log.info("Обновление события с id {} по запросу пользователя с id {} с новыми параметрами {}",
-                eventId, userId, updateEventUserRequest);
-
-        checkNewEventDate(updateEventUserRequest.getEventDate(), LocalDateTime.now().plusHours(2));
-
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователя с таким id не существует."));
-
-        Event event = getEventByIdAndInitiatorId(eventId, userId);
+    public EventFullDto patchEventByUserId(Long userId, Long eventId, UpdateEventUserRequest updateEventUserRequest) {
+        User user = userService.validateUser(userId);
+        Event event = validatedEvent(eventId, userId);
+        if (updateEventUserRequest.getEventDate() != null) {
+            if (LocalDateTime.parse(updateEventUserRequest.getEventDate(), TimeUtil.FORMATTER).isBefore(event.getEventDate())) {
+                throw new ValidationException("Неправильно указано время");
+            }
+        }
 
         if (event.getState().equals(EventState.PUBLISHED)) {
-            throw new ForbiddenException("Изменять можно только неопубликованные или отмененные события.");
+            throw new ConflictException("Событие уже опубликовано");
         }
-
-        if (updateEventUserRequest.getAnnotation() != null) {
-            event.setAnnotation(updateEventUserRequest.getAnnotation());
-        }
-
-        if (updateEventUserRequest.getCategory() != null) {
-            event.setCategory(categoryRepository
-                    .findById(updateEventUserRequest.getCategory())
-                    .orElseThrow(() -> new NotFoundException("Категории с таким id не существует.")));
-        }
-
-        if (updateEventUserRequest.getDescription() != null) {
-            event.setDescription(updateEventUserRequest.getDescription());
-        }
-
-        if (updateEventUserRequest.getEventDate() != null) {
-            event.setEventDate(updateEventUserRequest.getEventDate());
-        }
-
-        if (updateEventUserRequest.getLocation() != null) {
-            event.setLocation(getOrSaveLocation(updateEventUserRequest.getLocation()));
-        }
-
-        if (updateEventUserRequest.getPaid() != null) {
-            event.setPaid(updateEventUserRequest.getPaid());
-        }
-
-        if (updateEventUserRequest.getParticipantLimit() != null) {
-            event.setParticipantLimit(updateEventUserRequest.getParticipantLimit());
-        }
-
-        if (updateEventUserRequest.getRequestModeration() != null) {
-            event.setRequestModeration(updateEventUserRequest.getRequestModeration());
-        }
-
         if (updateEventUserRequest.getStateAction() != null) {
-            switch (updateEventUserRequest.getStateAction()) {
-                case SEND_TO_REVIEW:
-                    event.setState(EventState.PENDING);
-                    break;
-                case CANCEL_REVIEW:
-                    event.setState(EventState.CANCELED);
-                    break;
+            if (StateAction.changeStringToState(updateEventUserRequest.getStateAction()) == (StateAction.CANCEL_REVIEW)) {
+                event.setState(EventState.CANCELED);
+            } else {
+                event.setState(EventState.PENDING);
             }
         }
 
-        if (updateEventUserRequest.getTitle() != null) {
-            event.setTitle(updateEventUserRequest.getTitle());
+        if (!user.equals(event.getInitiator())) {
+            throw new ConflictException(String.format("Пользователь с ID = %d не является инициатором события", userId));
         }
+        EventFullDto eventFullDto = EventMapper.toEventFullDto(EventMapper.toEventFullDto(event), updateEventUserRequest);
+        eventFullDto.setCategory(updateEventUserRequest.getCategoryDto() != null ? categoryService.findCategoryById(updateEventUserRequest.getCategoryDto()) : CategoryMapper.toCategoryDto(event.getCategory()));
+        return eventFullDto;
 
-        return toEventFullDto(eventRepository.save(event));
     }
 
     @Override
-    public List<EventShortDto> getEventsByPublic(SearchEventParams searchEventParams,
-                                                 EventSort sort, Integer from, Integer size,
-                                                 HttpServletRequest request) {
-        log.info("Вывод событий на публичный запрос с параметрами text = {}, categoriesId = {}, paid = {}, rangeStart = {}, " +
-                        "rangeEnd = {}, onlyAvailable = {}, sort = {}, from = {}, size = {}",
-                searchEventParams.getText(), searchEventParams.getCategories(), searchEventParams.getPaid(), searchEventParams.getRangeStart(), searchEventParams.getRangeEnd(), searchEventParams.getOnlyAvailable(), sort, from, size);
+    public void updateConfirmedRequest(int confirmedRequest, Long eventId) {
+        eventRepository.updateConfirmedRequest(confirmedRequest, eventId);
+    }
 
-        checkStartIsBeforeEnd(searchEventParams.getRangeStart(), searchEventParams.getRangeEnd());
+    @Override
+    @Transactional(readOnly = true)
+    public List<EventFullDto> getAllEvents(List<Long> users, List<EventState> states, List<Long> categories,
+                                           LocalDateTime startLocal, LocalDateTime endLocal, Integer from, Integer size) {
+        Sort sortByDate = Sort.by(Sort.Direction.ASC, "id");
+        PageRequest page = PageRequest.of(from / size, size,sortByDate);
+        LocalDateTime start;
+        if (users.isEmpty()) {
+            users = userRepository.findAll().stream().map(User::getId).collect(Collectors.toList());
+        }
+        if (startLocal != null) {
+            start = startLocal;
+        } else {
+            start = LocalDateTime.now();
+        }
+        LocalDateTime end;
+        if (endLocal != null) {
+            end = endLocal;
+        } else {
+            end = LocalDateTime.of(3333, 3, 3, 3, 3);
+        }
+        if (end.isBefore(LocalDateTime.now()) || end.isBefore(start)) {
+            throw new IllegalArgumentException("Неправильный запрос");
+        }
 
-        List<Event> events = eventRepository.getEventsByPublic(searchEventParams.getText(), searchEventParams.getCategories(), searchEventParams.getPaid(), searchEventParams.getRangeStart(), searchEventParams.getRangeEnd(), from, size);
+        List<Event> events = eventRepository.findByInitiatorIdIn(users, page);
 
+        return events.stream().map(EventMapper::toEventFullDto).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EventShortDto> findAllEventsByText(String text, List<Long> categories, Boolean paid,
+                                                   LocalDateTime startLocal, LocalDateTime endLocal, Boolean onlyAvailable,
+                                                   String sortParam, Integer from, Integer size, HttpServletRequest request) {
+        Sort sortByDate = Sort.by(Sort.Direction.ASC, "id");
+        Integer index = from  / size;
+        PageRequest page = PageRequest.of(index, size, sortByDate);
+        LocalDateTime start;
+
+        if (categories == null || categories.isEmpty()) {
+            categories = categoryRepository.findAll().stream().map(Category::getId).collect(Collectors.toList());
+        }
+        if (startLocal != null) {
+            start = startLocal;
+        } else {
+            start = LocalDateTime.now();
+        }
+        LocalDateTime end;
+        if (endLocal != null) {
+            end = endLocal;
+        } else {
+            end = LocalDateTime.of(3333, 3, 3, 3, 3);
+        }
+        if (end.isBefore(LocalDateTime.now()) || end.isBefore(start)) {
+            throw new ValidationException("Неправильный запрос");
+        }
+        List<Event> events = eventRepository.searchEventsByAnnotationContainsOrDescriptionContainsAndCategoryIdInAndPaidAndCreatedOnBetween(text, text, categories, paid, startLocal, endLocal, page).stream()
+                .filter(event -> event.getParticipantLimit() > event.getConfirmedRequests()).collect(Collectors.toList());
+        if (sortParam.equals("EVENT_DATE")) {
+            events = events.stream().sorted(Comparator.comparing(Event::getEventDate)).collect(Collectors.toList());
+        } else if (sortParam.equals("VIEWS")) {
+            events = events.stream().sorted(Comparator.comparing(Event::getViews)).collect(Collectors.toList());
+        }
         if (events.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
+        client.postHit(request.getRequestURI(),request.getRemoteAddr());
 
-        Map<Long, Integer> eventsParticipantLimit = new HashMap<>();
-        events.forEach(event -> eventsParticipantLimit.put(event.getId(), event.getParticipantLimit()));
-
-        List<EventShortDto> eventsShortDto = eventTool.toEventsShortDto(events);
-
-        if (searchEventParams.getOnlyAvailable()) {
-            eventsShortDto = eventsShortDto.stream()
-                    .filter(eventShort -> (eventsParticipantLimit.get(eventShort.getId()) == 0 ||
-                            eventsParticipantLimit.get(eventShort.getId()) > eventShort.getConfirmedRequests()))
-                    .collect(Collectors.toList());
-        }
-
-        if (needSort(sort, EventSort.VIEWS)) {
-            eventsShortDto.sort(Comparator.comparing(EventShortDto::getViews));
-        } else if (needSort(sort, EventSort.EVENT_DATE)) {
-            eventsShortDto.sort(Comparator.comparing(EventShortDto::getEventDate));
-        }
-
-        statsService.addHit(request);
-
-        return eventsShortDto;
+        return events.stream().map(EventMapper::toEventShortDto).collect(Collectors.toList());
     }
 
     @Override
-    public EventFullDto getEventByPublic(Long eventId, HttpServletRequest request) {
-        log.info("Вывод события с id {} на публичный запрос", eventId);
+    @Transactional(readOnly = true)
+    public EventFullDto findEventById(Long eventId, HttpServletRequest request) {
 
-        Event event = getEventById(eventId);
-
-        if (!event.getState().equals(EventState.PUBLISHED)) {
-            throw new NotFoundException("Событие с таким id не опубликовано.");
+        Event event = validatedEvent(eventId);
+        if (event.getState() != EventState.PUBLISHED) {
+            throw new ObjectNotFoundException("Событие не опубликовано");
         }
-
-        statsService.addHit(request);
-
-        return toEventFullDto(event);
+        client.postHit(request.getRequestURI(), request.getRemoteAddr());
+        event.setViews(client.getViews(request.getRequestURI()));
+        eventRepository.save(event);
+        return EventMapper.toEventFullDto(event);
     }
 
     @Override
-    public Event getEventById(Long eventId) {
-        log.info("Вывод события с id {}", eventId);
-
-        return eventRepository.findById(eventId)
-                .orElseThrow(() -> new NotFoundException("События с таким id не существует."));
+    @Transactional(readOnly = true)
+    public List<ParticipationRequestDto> findInfoRequestByEvent(Long userId, Long eventId) {
+        return requestRepository.findByEventId(eventId)
+                .stream().map(RequestMapper::toParticipationRequestDto).collect(Collectors.toList());
     }
 
-    @Override
-    public List<Event> getEventsByIds(List<Long> eventsId) {
-        log.info("Вывод списка событий с ids {}", eventsId);
-
-        if (eventsId.isEmpty()) {
-            return new ArrayList<>();
-        }
-
-        return eventRepository.findAllByIdIn(eventsId);
-    }
-
-    private List<EventFullDto> toEventsFullDto(List<Event> events) {
-        Map<Long, Long> views = statsService.getViews(events);
-        Map<Long, Long> confirmedRequests = statsService.getConfirmedRequests(events);
-
-        return events.stream()
-                .map((event) -> eventMapper.toEventFullDto(
-                        event,
-                        confirmedRequests.getOrDefault(event.getId(), 0L),
-                        views.getOrDefault(event.getId(), 0L)))
-                .collect(Collectors.toList());
-    }
-
-    private EventFullDto toEventFullDto(Event event) {
-        return toEventsFullDto(List.of(event)).get(0);
-    }
-
-    private Event getEventByIdAndInitiatorId(Long eventId, Long userId) {
-        log.info("Вывод события с id {}", eventId);
-
-        return eventRepository.findByIdAndInitiatorId(eventId, userId)
-                .orElseThrow(() -> new NotFoundException("События с таким id не существует."));
-    }
-
-    private Location getOrSaveLocation(LocationDto locationDto) {
-        Location newLocation = locationMapper.toLocation(locationDto);
-        return locationRepository.findByLatAndLon(newLocation.getLat(), newLocation.getLon())
-                .orElseGet(() -> locationRepository.save(newLocation));
-    }
-
-    private Boolean needSort(EventSort sort, EventSort typeToCompare) {
-        return sort != null && sort.equals(typeToCompare);
-    }
-
-    private void checkStartIsBeforeEnd(LocalDateTime rangeStart, LocalDateTime rangeEnd) {
-        if (rangeStart != null && rangeEnd != null && rangeStart.isAfter(rangeEnd)) {
-            throw new BadRequestException(String.format("Field: eventDate. Error: некорректные параметры временного " +
-                    "интервала. Value: rangeStart = %s, rangeEnd = %s", rangeStart, rangeEnd));
-        }
-    }
-
-    private void checkNewEventDate(LocalDateTime newEventDate, LocalDateTime minTimeBeforeEventStart) {
-        if (newEventDate != null && newEventDate.isBefore(minTimeBeforeEventStart)) {
-            throw new BadRequestException(String.format("Field: eventDate. Error: остается слишком мало времени для " +
-                    "подготовки. Value: %s", newEventDate));
-        }
-    }
-
-    private void checkIsNewLimitNotLessOld(Integer newLimit, Long eventParticipantLimit) {
-        if (newLimit != 0 && eventParticipantLimit != 0 && (newLimit < eventParticipantLimit)) {
-            throw new BadRequestException(String.format("Field: stateAction. Error: Новый лимит участников должен " +
-                    "быть не меньше количества уже одобренных заявок: %s", eventParticipantLimit));
-        }
-    }
 }
